# mpna

./: .gitignore
02-iterative-relaxation/: CMakeLists.txt  CSRMatrix.h  ConjugateGradient.h  GMRES.h  main_cg.cpp
03-sparse-matvec/: CMakeLists.txt  COOVector.h  CSRMatrix.h  Jacobi.h  Utils.h  main.cpp  mmio.h  mpi_main.cpp
04-nonlinear/: Makefile  config.txt  hypre_project.c
